--- a/.github/workflows/auto-build-container.yml
+++ b/.github/workflows/auto-build-container.yml
@@ -9,10 +9,10 @@ on:
     paths:
       - 'pihole-unbound/**'
       - '.github/workflows/auto-build-container.yml'
-  # schedule:
-  # # cron job to trigger the build daily
-  # # at 3am on Friday
-  #   - cron:  '0 3 * * 5'
+  schedule:
+  # cron job to trigger the build daily
+  # at 3am on Friday
+    - cron:  '0 3 * * 5'
 
 permissions:
   contents: write
@@ -32,12 +32,18 @@ jobs:
         repository: "pi-hole/docker-pi-hole"
         type: "stable"
       run: echo release=$(curl --silent "https://api.github.com/repos/pi-hole/docker-pi-hole/releases/latest" | jq -r '.tag_name') >> $GITHUB_OUTPUT
-
+    
+    - name: Get lowercase repo name
+        id: get_lowercase_repo_name
+        run: |
+          REPO_NAME=${{ env.IMAGE_NAME }} 
+          echo "LOWER_CASE_REPO_NAME=${REPO_NAME,,}" >> $GITHUB_ENV
+      
     - name: Get previous release tag
       id: previous_release
       env:
         token: ${{ secrets.GITHUB_TOKEN }}
-        repository: "aleksanderbl29/docker-pihole-unbound"
+        repository: "${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}"
         type: "stable"
       run: echo release=$(curl --silent "https://api.github.com/repos/aleksanderbl29/docker-pihole-unbound/releases/latest" | jq -r '.tag_name' ) >> $GITHUB_OUTPUT
 
@@ -49,13 +55,14 @@ jobs:
       uses: docker/setup-buildx-action@v3
       if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
-
+      
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
@@ -63,7 +70,7 @@ jobs:
         context: "{{defaultContext}}:pihole-unbound/"
         platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
         push: true
-        tags: aleksanderbl/pihole-unbound:latest,aleksanderbl/pihole-unbound:${{ steps.latest_release.outputs.release }}
+        tags: ${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}:latest,${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}:${{ steps.latest_release.outputs.release }}
       if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
 
     - name: Create release
