--- a/.github/workflows/force-build-container.yml
+++ b/.github/workflows/force-build-container.yml
@@ -1,5 +1,5 @@
 ---
-name: Force docker build and publish
+name: Build and publish container
 
 on:
   workflow_dispatch:
@@ -22,31 +22,37 @@ jobs:
         repository: "pi-hole/docker-pi-hole"
         type: "stable"
       run: echo release=$(curl --silent "https://api.github.com/repos/pi-hole/docker-pi-hole/releases/latest" | jq -r '.tag_name') >> $GITHUB_OUTPUT
-
+    
+    - name: Get lowercase repo name
+      id: get_lowercase_repo_name
+      run: |
+        REPO_NAME=${{ env.IMAGE_NAME }} 
+        echo "LOWER_CASE_REPO_NAME=${REPO_NAME,,}" >> $GITHUB_ENV
+      
     - name: Get previous release tag
       id: previous_release
       env:
         token: ${{ secrets.GITHUB_TOKEN }}
-        repository: "aleksanderbl29/docker-pihole-unbound"
+        repository: "${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}"
         type: "stable"
       run: echo release=$(curl --silent "https://api.github.com/repos/aleksanderbl29/docker-pihole-unbound/releases/latest" | jq -r '.tag_name' ) >> $GITHUB_OUTPUT
 
-    - name: Get todays date
-      id: date
-      run: echo date=$(date +%Y-%m-%d) >> $GITHUB_OUTPUT
-
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
+      if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+      if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
+    - name: Log in to the Container registry
+      uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+      if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
+      
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
@@ -54,21 +60,21 @@ jobs:
         context: "{{defaultContext}}:pihole-unbound/"
         platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
         push: true
-        tags: aleksanderbl/pihole-unbound:${{ steps.latest_release.outputs.release }}-dev,aleksanderbl/pihole-unbound:${{ steps.latest_release.outputs.release }}-force-${{steps.date.outputs.date}}
+        tags: ${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}:latest,${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}:${{ steps.latest_release.outputs.release }}
+      if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
 
-    # - name: Create release
-    #   uses: softprops/action-gh-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     tag_name: "${{ steps.latest_release.outputs.release }}-force-${{steps.date.outputs.date}}"
-    #     name: "Forced build of ${{ steps.latest_release.outputs.release }}"
-    #     body: |
-    #       This release was force built by @aleksanderbl29
-
-    #       Changelog found on [pi-hole github](https://github.com/pi-hole/docker-pi-hole/releases), please read the changes before updating.
-    #       You can update the docker image with:
-    #       ```
-    #       docker compose pull
-    #       docker compose up -d
-    #       ```
+    - name: Create release
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.latest_release.outputs.release }}
+        name: "${{ steps.latest_release.outputs.release }}"
+        body: |
+          Changelog found on [pi-hole github](https://github.com/pi-hole/docker-pi-hole/releases), please read the changes before updating.
+          You can update the docker image with:
+          ```
+          docker compose pull
+          docker compose up -d
+          ```
+      if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
