--- a/.github/workflows/auto-build-container.yml
+++ b/.github/workflows/auto-build-container.yml
@@ -14,6 +14,10 @@ on:
   # at 3am on Friday
     - cron:  '0 3 * * 5'
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  
 permissions:
   contents: write
 
