finalize workflow changes

--- a/.github/workflows/force-build-container.yml
+++ b/.github/workflows/force-build-container.yml
@@ -10,6 +10,7 @@ env:
   
 permissions:
   contents: write
+  packages: write
 
 jobs:
   docker:
@@ -39,7 +40,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         repository: "${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}"
         type: "stable"
-      run: echo release=$(curl --silent "https://api.github.com/repos/aleksanderbl29/docker-pihole-unbound/releases/latest" | jq -r '.tag_name' ) >> $GITHUB_OUTPUT
+      run: echo release=$(curl --silent "https://api.github.com/repos/${{ github.actor }}/docker-pihole-unbound/releases/latest" | jq -r '.tag_name' ) >> $GITHUB_OUTPUT
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
