--- a/.github/workflows/auto-build-container.yml
+++ b/.github/workflows/auto-build-container.yml
@@ -50,7 +50,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         repository: "${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}"
         type: "stable"
-      run: echo release=$(curl --silent "https://api.github.com/repos/milkers69/docker-pihole-unbound/releases/latest" | jq -r '.tag_name' ) >> $GITHUB_OUTPUT
+      run: echo release=$(curl --silent "https://api.github.com/repos/${{ github.actor }}/docker-pihole-unbound/releases/latest" | jq -r '.tag_name' ) >> $GITHUB_OUTPUT
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
@@ -76,20 +76,4 @@ jobs:
         platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
         push: true
         tags: ${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}:latest,${{ env.REGISTRY }}/${{ env.LOWER_CASE_REPO_NAME }}:${{ steps.latest_release.outputs.release }}
-      if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
-
-    - name: Create release
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.latest_release.outputs.release }}
-        name: "${{ steps.latest_release.outputs.release }}"
-        body: |
-          Changelog found on [pi-hole github](https://github.com/pi-hole/docker-pi-hole/releases), please read the changes before updating.
-          You can update the docker image with:
-          ```
-          docker compose pull
-          docker compose up -d
-          ```
       if: ${{ steps.latest_release.outputs.release != steps.previous_release.outputs.release }}
